--- a/layout_parts/q1/css/style.css
+++ b/layout_parts/q1/css/style.css
@@ -1,5 +1,34 @@
 @charset "UTF-8";
 
+.q1_content{
+  background-color: #eff3f4;
+  width: 900px;
+  margin: 0 auto;
+  padding: 20px;
+}
+.q1_content_box{
+  background-color: #3274ae;
+  float: left;
+  margin-left: 20px;
+  padding: 20px;
+  width: 230px;
+}
+.q1__content .q1__content__box:first-child {
+  margin-left: 0;
+}
+.q1_content_text{
+  padding: 20px;
+  font-size: 16px;
+  line-height: 16px;
+  border: 10px solid #022336;
+  background-color: #eaf4ff;
+}
+.clearfix::after{
+  display: block;
+  content: "";
+  clear: both;
+}
+
 /* 回答はここに書いてね */
 
 /* 回答はここに書いてね */
