--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -1,5 +1,27 @@
 @charset "UTF-8";
 
-/* 回答はここに書いてね */
-
+.clearfix::after{
+  display: block;
+  content: "";
+  clear: both;
+}
+.q2_content_box{
+  background-color: #eff3f4;
+  width: 940px;
+  margin: 0 auto;
+} 
+.image1{
+  margin: 20px 20px 10px 20px;
+  float: left;
+}
+.image2{
+  margin: 0px 20px 10px 20px;
+  float: right;
+}
+.q2_text_box{
+  font-size: 18px;
+  line-height: 22px;
+  margin: 0px 20px 0px 20px;
+  text-align: justify;
+}
 /* 回答はここに書いてね */
