--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -1,5 +1,66 @@
 @charset "UTF-8";
 
+.q6__box{
+  display: inline-block;
+}
+.text1{
+  text-align: center;
+  background-color: #e6f2ff;
+  width: 90px;
+  padding: 10px;
+  margin: auto;
+}
+.q6-2{
+  display: table;
+}
+.table{
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+
+}
+.text2{
+  background-color: #fff;
+  padding: 10px;
+  display: inline-block;
+}
+.q6-3{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.text3{
+  background-color: #fff;
+  padding: 10px;
+  width: auto;
+  height: auto;
+  margin: auto;
+}
+.q6-outer{
+  position: relative;
+}
+.q6-inner{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 110px;
+  height: 30px;
+}
+.q6-2-outer{
+  position: relative;
+}
+.q6-2-inner{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  padding: 10px;
+  transform: translateX(-50%)translateY(-50%);
+}
+
 /* 回答はここに書いてね */
 
 /* 回答はここに書いてね */
