--- a/layout_parts/q3/css/style.css
+++ b/layout_parts/q3/css/style.css
@@ -1,18 +1,28 @@
 @charset "UTF-8";
 
-table, td, th{
-  border: 1px solid #dedede;
-  margin: auto;
+.food{
+  width: 100%;
+  border: solid 1px #dedede;
+  table-layout: fixed;
 }
 table{
   text-align: center;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 th{
-  padding: 10px 20px 10px 20px;
+  display: table-cell;
+  background-color: #2244aa;
+  padding: 10px;
   color: white;
+  font-size: 18px;
+  line-height: 26px;
+  border: 1px solid #dedede;
 }
 td{
-  padding: 10px 20px 10px 20px;
+  padding: 10px;
+  border: solid 1px #dedede;
+  vertical-align: middle;
 }
 td:first-child{
   background-color: #2244aa;
