--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -1,45 +1,38 @@
 @charset "UTF-8";
+.q4{
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #ECF1F2;
+}
 .box1{
   display: table;
-  margin: auto;
-  border-collapse: separate;
-  border-spacing: 0px 10px;
+  border-spacing: 0 10px;
+  width: 100%;
 }
-.固定1{
+.cell{
   display: table-cell;
   text-align: center;
+}
+.pink{
   background-color: #fdc8b8;
   width: 100px;
-  padding: 20px 0px 20px 0px;
+  padding: 20px 0;
 }
-.可変1{
-  display: table-cell;
-  text-align: center;
+.purple{
   background-color: #e0abd9;
-  width: 500px;
 }
-.固定2{
-  display: table-cell;
-  text-align: center;
+.blue{
   background-color: #b6d8ed;
   width: 100px;
 }
-.可変2{
-  display: table-cell;
-  text-align: center;
+.yellow{
   background-color: #e5d32e;
-  width: 100px;
   padding: 20px 0px 20px 0px;
 }
-.可変3{
-  display: table-cell;
-  text-align: center;
+.red{
   background-color: #ec8f9a;
-  width: 100px;
 }
-.固定3{
-  display: table-cell;
-  text-align: center;
+.green{
   background-color: #8fdcad;
   width: 500px;
 }
@@ -47,7 +40,8 @@
   display: table;
   margin: auto;
   border-collapse: separate;
-  border-spacing: 0px 10px;
+  border-spacing: 0 10px;
+  width: 100%;
 }
 /* 回答はここに書いてね */
 
