--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -3,11 +3,13 @@
 .q6__box{
   display: inline-block;
 }
+.text{
+  padding: 10px;
+}
 .text1{
   text-align: center;
   background-color: #e6f2ff;
   width: 90px;
-  padding: 10px;
   margin: auto;
 }
 .q6-2{
@@ -17,11 +19,9 @@
   display: table-cell;
   vertical-align: middle;
   text-align: center;
-
 }
 .text2{
   background-color: #fff;
-  padding: 10px;
   display: inline-block;
 }
 .q6-3{
@@ -31,10 +31,7 @@
 }
 .text3{
   background-color: #fff;
-  padding: 10px;
   width: auto;
-  height: auto;
-  margin: auto;
 }
 .q6-outer{
   position: relative;
@@ -46,8 +43,6 @@
   left: 0;
   right: 0;
   margin: auto;
-  width: 110px;
-  height: 30px;
 }
 .q6-2-outer{
   position: relative;
